[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://弹幕相关/遮罩/基础遮罩.gd" id="1_1bfm7"]

[sub_resource type="RectangleShape2D" id="1"]
resource_local_to_scene = true
size = Vector2(200, 200)

[node name="基础遮罩" type="Area2D"]
script = ExtResource("1_1bfm7")
owner_list = ["self", "self_bomb"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="EndTimer" type="Timer" parent="."]
one_shot = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-100, -100, 200, 200)

[connection signal="area_entered" from="." to="." method="_on__area_entered"]
[connection signal="area_exited" from="." to="." method="_on__area_exited"]
[connection signal="body_entered" from="." to="." method="_on__body_entered"]
[connection signal="body_exited" from="." to="." method="_on__body_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
